# battery-advisor

./: .SRCINFO  .gitignore  PKGBUILD  README.md  defaultSettings.toml  main.py  main.pyw  pyproject.toml
advisor/: __init__.py  settings_loader.py  types.py  utils.py
battery_advisor/: battery_advisor.py  entry.py  notifications.py  settings_loader.py  tray.py  types.py  utils.py
battery_advisor/gui/: alerts.py
pkg/battery-advisor/: .BUILDINFO  .MTREE  .PKGINFO
